# pmsa

./: Cargo.toml  README.md
examples/: benchmark.rs
src/: lib.rs  par.rs  seq.rs  utils.rs
