[package]
name = "pmsa"
version = "0.1.0"
edition = "2021"
description = "Parallel Mergeing of two Sorted Array"
categories = ["algorithms"]
documentation = "https://docs.rs/pmsa/"
repository = "https://github.com/jerry73204/pmsa.git"
homepage = "https://github.com/jerry73204/pmsa"
readme = "README.md"
license = "MIT"

[dependencies]
rayon = "1.5.3"

[dev-dependencies]
anyhow = "1.0.59"
clap = { version = "3.2.16", features = ["derive"] }
rand = "0.8.5"
itertools = "0.10.3"
